# kodiaq

./: .buildinfo  Doxyfile  LICENSE.txt  Makefile  Makefile.am  Makefile.in  Makefile~  README  README.rst  ReadMe.txt  configure  configure.ac  deployment.html  genindex.html  help.html  index.html  install_user.sh  installation.html  intro.html  jargon.html  kodiaq_client  kodiaq_client.sh  libtool  monitoringdatabase.html  objects.inv  options.html  params.json  protocols.html  search.html  searchindex.js  usage.html  webinterface.html
_sources/: deployment.txt  index.txt  installation.txt  intro.txt  jargon.txt  options.txt  protocols.txt  usage.txt
_static/: bstheme.css  theme.js
caen/A2818Drv/: Readme.txt  a2818.c  a2818_load  a2818_load.2.6-3.x  modules.order
caen/A2818Drv-1.17/: CAEN_License_Agreement.txt  Makefile  Makefile.2.6-3.x  Readme.txt  ReleaseNotes.txt  a2818.c
caen/A2818Drv-dc/: ReleaseNotes.txt  a2818.c  modules.order
caen/A3818Drv-1.4/: Readme.txt  ReleaseNotes.txt  modules.order
caen/A3818Drv-1.4/.tmp_versions/: a3818.mod
caen/A3818Drv-1.4/src/: .a3818.ko.cmd  .a3818.mod.o.cmd  .a3818.o.cmd  a3818.c  a3818.ko  a3818.mod.c
caen/A3818Drv-1.5.1/: ReleaseNotes.txt
caen/A3818Drv-1.5.2/: Makefile  Readme.txt  ReleaseNotes.txt  dkms.conf  install_64.sh  modules.order
caen/A3818Drv-1.5.2/src/: .a3818.ko.cmd  .a3818.mod.o.cmd  .a3818.o.cmd  a3818.c  a3818.ko  a3818.mod.c
daq_config/: DAQOptionsMaster.ini  install_script.sh
doctrees/: deployment.doctree  environment.pickle  help.doctree  index.doctree  installation.doctree  intro.doctree  jargon.doctree  options.doctree  protocols.doctree  usage.doctree
klite/: DAQConfig.ini  README  StartDAQ  StartDAQ.sh
protoc/: README  protBuffDef.pb.h  protBuffDef_pb2.py
protoc/archive/: protBuffDef_140325.proto
source/: conf.py  conf.py~  deployment.rst  deployment.rst~  help.rst  index.rst  index.rst~  installation.rst  installation.rst~  intro.rst  intro.rst~  jargon.rst  monitoringdatabase.rst  options.rst  options.rst~  usage.rst  usage.rst~  webinterface.rst
source/_templates/: globaltoc.html  layout.html  navbar.html  relations.html
src/common/: Makefile  Makefile.am  Makefile.in  NCursesUI.cc  NCursesUI.hh  XeDAQHelper.cc  XeDAQHelper.hh  XeDAQLogger.cc  XeDAQLogger.hh  XeDAQOptions.cc  XeDAQOptions.hh  XeNet.cc  XeNet.hh  XeNetClient.cc  XeNetClient.hh  XeNetServer.cc  XeNetServer.hh  kbhit.cc  kbhit.hh  koHelper.cc  koHelper.hh  koLogger.cc  koLogger.hh  koNet.cc  koNet.hh  koNetClient.cc  koNetClient.hh  koNetServer.cc  koNetServer.hh  koOptions.cc  koOptions.hh  koSysmon.cc  koSysmon.hh
src/ddc10/: Makefile.am  Makefile.in  ddc_10.cc  ddc_10.hh
src/master/: DAQMonitor.cc  DAQMonitor.hh  Makefile  Makefile.am  Makefile.in  MasterControl.cc  MasterControl.hh  MasterDAQMonitor.cc  MasterDAQMonitor.hh  MasterMongodbConnection.cc  MasterMongodbConnection.hh  MasterUI.cc  MasterUI.hh  koMaster.cc
src/master/data/: RunModes.ini
src/master/data/RunModes/: DAQOptionsMaster.ini  testDAQ.ini  testDAQ.ini~  testDAQNoWrite.ini  testDAQNoWrite.ini~  testDAQNoWrite_NOZLE.ini  testDAQNoWrite_NOZLE.ini~  testDAQZIPNOZLE.ini  testDAQZIPNOZLE.ini~  testDAQZip.ini  testDAQZip.ini~  testDAQ_SEP_ZIPNOZLE.ini  testDAQ_SEP_ZIPNOZLE.ini~  testDAQ_ZIPNOZLE.ini  testDAQ_ZIPNOZLE.ini~  testDAQ_noZLE.ini  testDAQ_noZLE.ini~
src/slave/: CBV1495.cc  CBV1495.hh  CBV1724.cc  CBV1724.hh  CBV2718.cc  CBV2718.hh  DAQRecorder.cc  DAQRecorder.hh  DataProcessor.cc  DataProcessor.hh  DigiInterface.cc  DigiInterface.hh  Makefile  Makefile.am  Makefile.in  NCursesUI.cc  NCursesUI.hh  NIMBoard.cc  NIMBoard.hh  SlaveConfig.ini  SlaveConfig.ini~  StandaloneToolbox.cc  StandaloneToolbox.hh  VMEBoard.cc  VMEBoard.hh  VMECrate.cc  VMECrate.hh  XeDAQRecorder.cc  XeDAQRecorder.hh  XeMongoRecorder.cc  XeMongoRecorder.hh  XeProcessor.cc  XeProcessor.hh  koSlave.cc  protBuffDef.pb.cc
src/user/: Makefile  Makefile.am  Makefile.in  NCursesUI.cc  NCursesUI.hh  XeCursesInterface.cc  XeCursesInterface.hh  koUser.cc
